--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
-  "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "name": "shadowrunner",
+  "description": "A Shadowrun character creator and sheet system",
+  "version": "0.0.1",
+  "homepage": "https://github.com/ep3998/shadowrunner",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0"
+    "angular-ui-bootstrap": "~1.1.2",
+    "angular-animate":"~1.4.0"
   }
 }
