--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "shadowrunner",
   "private": true,
-  "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "version": "0.0.1",
+  "description": "A Shadowrun character creator and sheet system",
+  "repository": "https://github.com/ep3998/shadowrunner",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
