--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "angular-ui-bootstrap": "~1.1.2",
-    "angular-animate":"~1.4.0"
+    "angular-bootstrap": "~1.1.2",
+    "angular-animate":"~1.4.0",
+    "angular-resource":"~1.4.0"
   }
 }
